--- a/portfolio.html
+++ b/portfolio.html
@@ -57,10 +57,12 @@
                 <ul class="portfolio list">
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
-                            <div class="overlay">
+                            <div class="product-thumb">
                                 <img src="./images/notebook.jpg" alt="Ноутбук с открытым веб-сайтом" width="370">
-                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                <div class="product-overlay">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                 шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-description">
                                 <h2 class="element-title">Технокряк</h2>
@@ -70,7 +72,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
-                            <img src="./images/basketball.jpg" alt="Постер" width="370">
+                            <div class="product-thumb">
+                                <img src="./images/basketball.jpg" alt="Постер" width="370">
+                                <div class="product-overlay">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="element-text">Дизайн</p>
@@ -79,7 +87,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
-                            <img src="./images/seafood.jpg" alt="Логотип ресторана" width="370">
+                            <div class="product-thumb">
+                                <img src="./images/seafood.jpg" alt="Логотип ресторана" width="370">
+                                <div class="product-overlay">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Ресторан Seafood</h2>
                                 <p class="element-text">Приложение</p>
@@ -88,7 +102,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
-                            <img src="./images/earphones.jpg" alt="Наушники" width="370">
+                            <div class="product-thumb">
+                                <img src="./images/earphones.jpg" alt="Наушники" width="370">
+                                <div class="product-overlay">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Проект Prime</h2>
                                 <p class="element-text">Маркетинг</p>
@@ -97,7 +117,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
+                            <div class="product-thumb">
                             <img src="./images/boxes.jpg" alt="Две коробки" width="370">
+                            <div class="product-overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Проект Boxes</h2>
                                 <p class="element-text">Приложение</p>
@@ -106,7 +132,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
-                            <img src="./images/monitor.jpg" alt="Монитор с открытым веб-сайтом" width="370">
+                            <div class="product-thumb">
+                                <img src="./images/monitor.jpg" alt="Монитор с открытым веб-сайтом" width="370">
+                                <div class="product-overlay">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Inspiration has no Borders</h2>
                                 <p class="element-text">Веб-сайт</p>
@@ -115,7 +147,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
+                            <div class="product-thumb">
                             <img src="./images/book.jpg" alt="Книга" width="370">
+                            <div class="product-overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Издание Limited Edition</h2>
                                 <p class="element-text">Дизайн</p>
@@ -124,7 +162,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
+                            <div class="product-thumb">
                             <img src="./images/labeltag.jpg" alt="Этикетка" width="370">
+                            <div class="product-overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Проект LAB</h2>
                                 <p class="element-text">Маркетинг</p>
@@ -133,7 +177,13 @@
                     </li>
                     <li class="portfolio-elements">
                         <a href="" class="portfolio-link">
+                            <div class="product-thumb">
                             <img src="./images/buisness.jpg" alt="Ростущий бизнес" width="370">
+                            <div class="product-overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="element-description">
                                 <h2 class="element-title">Growing Business</h2>
                                 <p class="element-text">Приложение</p>
