--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <svg class="contacts-icon" width="16px" height="12px">
                                     <use href="./images/sprite.svg#icon-mail"></use>
                                 </svg>
-                                <span>info@devstudio.com</span>
+                                info@devstudio.com
                             </a>
                         </li>
                         <li class="contacts-item">
@@ -36,7 +36,7 @@
                                 <svg class="contacts-icon" width="10px" height="16px">
                                     <use href="./images/sprite.svg#icon-smartphone"></use>
                                 </svg>
-                                <span>+38 096 111 11 11</span>
+                                +38 096 111 11 11
                             </a>
                         </li>
                     </ul>
@@ -110,15 +110,15 @@
                     <ul class="duties-list list">
                         <li class="duties-item">
                             <img src="./images/img1.jpg" alt="Программирование" width="370">
-                            <span class="duty-name">Десктопные приложения</span>
+                            <div class="duty-name">Десктопные приложения</div>
                         </li>
                         <li class="duties-item">
                             <img src="./images/img2.jpg" alt="Мобильные приложения" width="370">
-                            <span class="duty-name">Мобильные приложения</span>
+                            <div class="duty-name">Мобильные приложения</div>
                         </li>
                         <li class="duties-item">
                             <img src="./images/img3.jpg" alt="Дизайнерские решения" width="370">
-                            <span class="duty-name">Дизайнерские решения</span>
+                            <div class="duty-name">Дизайнерские решения</div>
                         </li>
                     </ul>
                 </div>
@@ -341,9 +341,10 @@
                     <div class="address-container">
                         <a href="./index.html" class="logo">Web<span class="footer-studio-logo">Studio</span></a>
                         <address class="footer-address">
-                            г. Киев, пр-т Леси Украинки, 26
-                        
                             <ul class="footer-contacts list">
+                                <li class="footer-item"><a class="exact-address"
+                                        href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+Украина,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                                 <li class="footer-item"><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                                 <li class="footer-item"><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
                             </ul>
@@ -386,8 +387,11 @@
         </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore tempore expedita, distinctio neque ut quae velit quo animi ipsum facere voluptatem architecto assumenda eligendi explicabo ullam pariatur. A, omnis esse?</p>
-            <button data-modal-close>Закрыть</button>
+            <button class="modal-close" data-modal-close>
+                <svg class="clients-icon" width="11px" height="11px">
+                    <use href="./images/sprite.svg#icon-cross"></use>
+                </svg>
+            </button>
         </div>
     </div>
     <!-- Скрипты -->
